--- a/he4rtlabs-challenges-03-resolution/backend/package.json
+++ b/he4rtlabs-challenges-03-resolution/backend/package.json
@@ -12,16 +12,21 @@
   },
   "scripts": {
     "json": "yarn json-server --watch ./src/database/db.json --port 3040",
-    "dev": "ts-node-dev --respawn --ignore-watch node_modules ./src/server.ts"
+    "dev": "ts-node-dev --respawn --ignore-watch node_modules ./src/server.ts",
+    "test": "jest --no-chache"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/eslint": "^7.2.6",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
   }
