--- a/he4rtlabs-challenges-03-resolution/backend/.eslintrc.json
+++ b/he4rtlabs-challenges-03-resolution/backend/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "commonjs": true,
         "es2021": true,
-        "node": true
+        "node": true,
+        "jest":true
     },
     "extends": [
         "airbnb-base"
@@ -12,8 +13,13 @@
         "ecmaVersion": 12
     },
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "plugin:prettier/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:@typescript-eslint/recommended"
     ],
-    "rules": {
-    }
+    "ignorePatterns": "build",
+  "rules": {
+    "prettier/prettier": "error",
+    "simple-import-sort/sort": "warn"}
 }
