--- a/he4rtlabs-challenges-03-resolution/backend/package.json
+++ b/he4rtlabs-challenges-03-resolution/backend/package.json
@@ -11,7 +11,7 @@
     "jsonwebtoken": "^8.5.1"
   },
   "scripts": {
-    "json": "yarn json-server --watch ./src/database/db.json --port 3040",
+    "json": "yarn json-server  --middlewares ./node_modules/json-server-reset --watch ./src/database/db.json --port 3040",
     "dev": "ts-node-dev --respawn --ignore-watch node_modules ./src/server.ts",
     "test": "jest --no-chache"
   },
@@ -20,12 +20,21 @@
     "@types/eslint": "^7.2.6",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.14.27",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^26.6.3",
+    "json-server-reset": "^1.3.0",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
