--- a/he4rtlabs-challenges-03-resolution/backend/package.json
+++ b/he4rtlabs-challenges-03-resolution/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -13,9 +14,11 @@
   "scripts": {
     "json": "yarn json-server  --middlewares ./node_modules/json-server-reset --watch ./src/database/db.json --port 3040",
     "dev": "ts-node-dev --respawn --ignore-watch node_modules ./src/server.ts",
-    "test": "jest --no-chache"
+    "test": "jest --no-chache",
+    "posttest": "node ./src/utils/reset.js"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/eslint": "^7.2.6",
     "@types/express": "^4.17.11",
